Prevented notice from wrapping on mobile.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -210,6 +210,14 @@ i[role="img"] {
 }
 
 .button_authentication_notice {
-  padding: 1rem;
+  display: block;
+  padding: 1rem 0 0;
   color: #888;
+}
+
+@media (min-width: 35rem) {
+  .button_authentication_notice {
+    display: inline-block;
+    padding: 1rem;
+  }
 }
